aligned left and right chat to correct positions.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     /*to create space between boundary and chat window content.*/
     padding: 10px;
 
+    width: 100%;
 }
 .chat{
     /*font color of chat text.*/
@@ -38,12 +39,23 @@
     border-radius: 10px;
     padding: 5px;
     margin-top:5px;
+
+    width: 250px;
+    /* max-width: 49%; */
 }
 .left{
     background: #2c3e50;
+    display: flex;
+    align-items: center;
+
 }
 .right{
     background: #7b59c0;
+    display: flex;
+    align-items: center;
+    
+    /* to bring chat right to right. */
+    margin-left: auto;
 }
 .join{
     background:  #3498db;
